objects/Auction__c.object
<CustomObject>
    <fields>
        <fullName>Total_Arbitration_Cases__c</fullName>
        <formula>Closed_Arbitration_Cases__c + Open_Arbitration_Cases__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Arbitration Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transportation_Date_Delivered__c</fullName>
        <label>Transportation Date Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transportation_Price_to_Customer__c</fullName>
        <label>Transportation Price to Customer</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transportation_Requested_In_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transportation Requested In-App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VCI_Creator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set by data integration.</description>
        <label>VCI_Creator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Auctions (VCI_Creator)</relationshipLabel>
        <relationshipName>Auctions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VCI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set by integration.</description>
        <inlineHelpText>Vehicle Condition Inspector for this Auction&apos;s Condition Report.</inlineHelpText>
        <label>VCI</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Auctions (VCI)</relationshipLabel>
        <relationshipName>Auctions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_ID_formula__c</fullName>
        <formula>vehicle_id__r.id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make__c</fullName>
        <label>Vehicle Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <label>Vehicle Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Trim__c</fullName>
        <label>Vehicle Trim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Year__c</fullName>
        <label>Vehicle Year</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waived_by_Pricing_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waived by Pricing Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Winning_Bid_Price__c</fullName>
        <label>High Bid Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X4_Hours_No_Buyer__c</fullName>
        <formula>AND (CONTAINS(Time_Since_Auction_End__c, &quot;4 hours&quot;), 
CONTAINS(TEXT(status__c), &quot;accepted&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>4 Hours No Buyer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XDate_Vehicle_Delivered__c</fullName>
        <label>XDate Vehicle Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>XDate_Vehicle_Picked_Up__c</fullName>
        <label>XDate Vehicle Picked Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_Make_Model__c</fullName>
        <formula>TEXT(vehicle_id__r.Year__c) &amp; &quot; &quot; &amp; vehicle_id__r.make__c &amp; &quot; &quot; &amp; vehicle_id__r.model__c &amp; &quot; &quot; &amp;  vehicle_id__r.trim__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year/Make/Model/Trim</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>address_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Integrated field. Stores a reference to the address of the vehicle&apos;s pickup location.</description>
        <label>Pick-up Address</label>
        <referenceTo>Transportation_Address__c</referenceTo>
        <relationshipLabel>Auction Pick-ups</relationshipLabel>
        <relationshipName>Auctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>auto_sell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>False = Live Appraisal
True = Auction
Populated via Tools data</description>
        <inlineHelpText>False = Live Appraisal
True = Auction</inlineHelpText>
        <label>Auto-sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blue_light__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blue Light</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>buy_fee__c</fullName>
        <label>Buy Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>buyer_credit__c</fullName>
        <label>Buyer Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>buyer_dealership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated by Integration to indicate the buying dealer at auction.</description>
        <label>Buyer Dealership</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>High Bid at Auction</relationshipLabel>
        <relationshipName>BuyerAuctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>buyer_total__c</fullName>
        <label>Buyer Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Compact Car</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mid-Size Car</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Full-Size Car</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Luxury Car</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Sporty Car</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Pickup</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Mid-Size SUV</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Full-Size SUV</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Cargo Van</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Passenger Van</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Crossover Van</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Small Car</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Commercial Truck</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>Crossover</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>Compact Van</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>Crossover SUV</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>ATV</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>Cruiser</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>Jet Boats</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>On/Off Road</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>Off Road</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>Powersports</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>Scooter</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>Snowmobile</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>Street</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>Utility</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>Watercraft</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>Recreational Vehicle</label>
                </value>
                <value>
                    <fullName>29</fullName>
                    <label>Trailer</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>Medium Duty Truck</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>condition_rating__c</fullName>
        <label>Condition Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>created__c</fullName>
        <label>Source Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>end_time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>exterior_condition__c</fullName>
        <label>Exterior Condition</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>floor_price__c</fullName>
        <label>Floor Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>green_light__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Green Light</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>This will be the same as Auction Number (Name), but is marked as an external ID for integration purposes.</description>
        <externalId>true</externalId>
        <label>Auction ID</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>interior_condition__c</fullName>
        <label>Interior Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mechanical_condition__c</fullName>
        <label>Mechanical Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>notes__c</fullName>
        <label>Notes</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>odometer__c</fullName>
        <label>Odometer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>payment_method__c</fullName>
        <description>Integrated field.</description>
        <label>Buyer Payment Method</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payment_status__c</fullName>
        <description>Integrated field.</description>
        <label>Buyer Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cleared</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Deposited</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>hold_on_file</fullName>
                    <label>Hold On File</label>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>payment_pending</fullName>
                    <label>Payment Pending</label>
                </value>
                <value>
                    <fullName>payment_returned</fullName>
                    <label>Payment Returned</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Recorded</fullName>
                </value>
                <value>
                    <fullName>Refunded</fullName>
                </value>
                <value>
                    <fullName>refund_pending</fullName>
                    <label>Refund Pending</label>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>ta_hold</fullName>
                    <label>TA Hold</label>
                </value>
                <value>
                    <fullName>ta_on_file</fullName>
                    <label>TA On File</label>
                </value>
                <value>
                    <fullName>to_be_floored</fullName>
                    <label>To Be Floored</label>
                </value>
                <value>
                    <fullName>to_be_picked_up</fullName>
                    <label>To Be Picked Up</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sell_fee__c</fullName>
        <label>Sell Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sell_fee_item_base_sell_fee__c</fullName>
        <label>Sell Fee Item Base Sell Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sell_fee_item_gl_insurance_fee__c</fullName>
        <label>Sell Fee Item GL Insurance Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sell_fee_item_vci_fee__c</fullName>
        <label>Sell Fee Item VCI Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sellable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sellable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seller Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Auctions as Seller</relationshipLabel>
        <relationshipName>Auctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>seller_credit__c</fullName>
        <label>Seller Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>seller_total__c</fullName>
        <label>Seller Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>start_time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>awaiting_acceptance</fullName>
                    <label>Awaiting Acceptance</label>
                </value>
                <value>
                    <fullName>counter_accepted</fullName>
                    <label>Counter Accepted</label>
                </value>
                <value>
                    <fullName>counter_original_accepted</fullName>
                    <label>Counter Original Accepted</label>
                </value>
                <value>
                    <fullName>counter_original_declined</fullName>
                    <label>Counter Original Declined</label>
                </value>
                <value>
                    <fullName>counter_sent</fullName>
                    <label>Counter Sent</label>
                </value>
                <value>
                    <fullName>ended_accepted</fullName>
                    <label>Ended Accepted</label>
                </value>
                <value>
                    <fullName>ended_declined</fullName>
                    <label>Ended Declined</label>
                </value>
                <value>
                    <fullName>ended_killed</fullName>
                    <label>Ended Killed</label>
                </value>
                <value>
                    <fullName>ended_nobid</fullName>
                    <label>Ended No Bid</label>
                </value>
                <value>
                    <fullName>ended_unwound</fullName>
                    <label>Ended Unwound</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>staging</fullName>
                </value>
                <value>
                    <fullName>Preview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>updated__c</fullName>
        <label>Source Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vehicle_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VIN</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Vehicle Auctions</relationshipLabel>
        <relationshipName>VehicleAuction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>yellow_light__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yellow Light</label>
        <type>Checkbox</type>
    </fields>
    <label>Auction</label>
    <listViews>
        <fullName>Accepted_Auctions</fullName>
        <columns>NAME</columns>
        <columns>id__c</columns>
        <columns>status__c</columns>
        <columns>Winning_Bid_Price__c</columns>
        <columns>vehicle_id__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>end_time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>counter_accepted,counter_original_accepted,ended_accepted</value>
        </filters>
        <label>Accepted Auctions</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>payment_method__c</columns>
        <columns>id__c</columns>
        <columns>NAME</columns>
        <columns>floor_price__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Release_DateTime__c</columns>
        <columns>odometer__c</columns>
        <columns>Seller_Payment_Date__c</columns>
        <columns>condition_rating__c</columns>
        <columns>Open_Arbitration_Cases__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>status__c</columns>
        <columns>Winning_Bid_Price__c</columns>
        <columns>end_time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Auctions</fullName>
        <columns>Territory_Manager_Seller__c</columns>
        <columns>id__c</columns>
        <columns>NAME</columns>
        <columns>floor_price__c</columns>
        <columns>odometer__c</columns>
        <columns>condition_rating__c</columns>
        <columns>Open_Arbitration_Cases__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>status__c</columns>
        <columns>Winning_Bid_Price__c</columns>
        <columns>end_time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>counter_sent,Counter Sent</value>
        </filters>
        <filters>
            <field>end_time__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Active Auctions</label>
    </listViews>
    <listViews>
        <fullName>All_With_Territories_and_Seller</fullName>
        <columns>id__c</columns>
        <columns>NAME</columns>
        <columns>Seller_Dealership__c</columns>
        <columns>buyer_dealership__c</columns>
        <columns>floor_price__c</columns>
        <columns>odometer__c</columns>
        <columns>condition_rating__c</columns>
        <columns>Open_Arbitration_Cases__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>status__c</columns>
        <columns>Winning_Bid_Price__c</columns>
        <columns>end_time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>ended_accepted,ended_declined,ended_killed,ended_nobid,ended_unwound</value>
        </filters>
        <label>All With Seller and Buyer</label>
    </listViews>
    <listViews>
        <fullName>Auction_Consumer_listview</fullName>
        <columns>NAME</columns>
        <columns>id__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Auction Consumer listview</label>
    </listViews>
    <listViews>
        <fullName>Failed_Auctions</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>Time_Since_Auction_End__c</columns>
        <columns>NAME</columns>
        <columns>MMR_Link__c</columns>
        <columns>ACV_Condition_Report__c</columns>
        <columns>Recent_Seller_s_Failed_Runs__c</columns>
        <columns>Year_Make_Model__c</columns>
        <columns>Seller_Dealership__c</columns>
        <columns>floor_price__c</columns>
        <columns>Winning_Bid_Price__c</columns>
        <columns>status__c</columns>
        <columns>Waived_by_Pricing_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>counter_original_declined,ended_declined,ended_nobid</value>
        </filters>
        <filters>
            <field>Waived_by_Pricing_Manager__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Count_of_Active_Pricing_Recommendations__c</field>
            <operation>lessThan</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Recent_Seller_s_Failed_Runs__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <label>Failed Auctions</label>
    </listViews>
    <listViews>
        <fullName>IST_Sold_Auctions_2_0</fullName>
        <booleanFilter>1 AND 6 AND 7 AND (2 OR 3 OR 4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>end_time__c</columns>
        <columns>status__c</columns>
        <columns>Buyer_IST_Rep__c</columns>
        <columns>Payment_Selected__c</columns>
        <columns>Payment_Cleared__c</columns>
        <columns>Seller_Dealership__c</columns>
        <columns>buyer_dealership__c</columns>
        <columns>payment_method__c</columns>
        <columns>payment_status__c</columns>
        <columns>ACV_Transportation_Requested__c</columns>
        <columns>Date_Picked_Up__c</columns>
        <columns>Date_Delivered__c</columns>
        <columns>Auction_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>counter_accepted,counter_original_accepted,ended_accepted</value>
        </filters>
        <filters>
            <field>Payment_Cleared__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Payment_Selected__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>XDate_Vehicle_Delivered__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>XDate_Vehicle_Picked_Up__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>end_time__c</field>
            <operation>greaterThan</operation>
            <value>3/12/2020 12:00 AM</value>
        </filters>
        <filters>
            <field>Buyer_IST_Rep__c</field>
            <operation>equals</operation>
            <value>Tim Olsen</value>
        </filters>
        <label>IST Sold Auctions 2.0</label>
    </listViews>
    <listViews>
        <fullName>IST_Sold_Auctions_View_Daniel_Erbacher</fullName>
        <booleanFilter>1 AND 6 AND 7 AND (2 OR 3 OR 4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>end_time__c</columns>
        <columns>Buyer_IST_Rep__c</columns>
        <columns>Payment_Selected__c</columns>
        <columns>Payment_Cleared__c</columns>
        <columns>XDate_Vehicle_Picked_Up__c</columns>
        <columns>XDate_Vehicle_Delivered__c</columns>
        <columns>Seller_Dealership__c</columns>
        <columns>buyer_dealership__c</columns>
        <columns>status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>counter_accepted,counter_original_accepted,ended_accepted</value>
        </filters>
        <filters>
            <field>Payment_Cleared__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Payment_Selected__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>XDate_Vehicle_Delivered__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>XDate_Vehicle_Picked_Up__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>end_time__c</field>
            <operation>greaterThan</operation>
            <value>3/12/2020 12:00 AM</value>
        </filters>
        <filters>
            <field>Buyer_IST_Rep__c</field>
            <operation>equals</operation>
            <value>Daniel Erbacher</value>
        </filters>
        <label>IST Sold Auctions View - Daniel Erbacher</label>
    </listViews>
    <listViews>
        <fullName>IST_Sold_Auctions_View_Elisa_Galante</fullName>
        <booleanFilter>1 AND 6 AND 7 AND (2 OR 3 OR 4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>end_time__c</columns>
        <columns>Buyer_IST_Rep__c</columns>
        <columns>Payment_Selected__c</columns>
        <columns>Payment_Cleared__c</columns>
        <columns>XDate_Vehicle_Picked_Up__c</columns>
        <columns>XDate_Vehicle_Delivered__c</columns>
        <columns>Seller_Dealership__c</columns>
        <columns>buyer_dealership__c</columns>
        <columns>status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>counter_accepted,counter_original_accepted,ended_accepted</value>
        </filters>
        <filters>
            <field>Payment_Cleared__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Payment_Selected__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>XDate_Vehicle_Delivered__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>XDate_Vehicle_Picked_Up__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>end_time__c</field>
            <operation>greaterThan</operation>
            <value>3/12/2020 12:00 AM</value>
        </filters>
        <filters>
            <field>Buyer_IST_Rep__c</field>
            <operation>equals</operation>
            <value>Elisa Galante</value>
        </filters>
        <label>IST Sold Auctions View - Elisa Galante</label>
    </listViews>
    <listViews>
        <fullName>IST_Sold_Auctions_View_Master_View</fullName>
        <booleanFilter>1 AND 6 AND (2 OR 3 OR 4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>end_time__c</columns>
        <columns>Buyer_IST_Rep__c</columns>
        <columns>Payment_Selected__c</columns>
        <columns>Payment_Cleared__c</columns>
        <columns>XDate_Vehicle_Picked_Up__c</columns>
        <columns>XDate_Vehicle_Delivered__c</columns>
        <columns>Seller_Dealership__c</columns>
        <columns>buyer_dealership__c</columns>
        <columns>status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>counter_accepted,counter_original_accepted,ended_accepted</value>
        </filters>
        <filters>
            <field>Payment_Cleared__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Payment_Selected__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>XDate_Vehicle_Delivered__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>XDate_Vehicle_Picked_Up__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>end_time__c</field>
            <operation>greaterThan</operation>
            <value>3/12/2020 12:00 AM</value>
        </filters>
        <label>IST Sold Auctions View - Master View</label>
    </listViews>
    <listViews>
        <fullName>IST_Sold_Auctions_View_Tim_Olsen</fullName>
        <booleanFilter>1 AND 6 AND 7 AND (2 OR 3 OR 4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>end_time__c</columns>
        <columns>Buyer_IST_Rep__c</columns>
        <columns>Payment_Selected__c</columns>
        <columns>Payment_Cleared__c</columns>
        <columns>XDate_Vehicle_Picked_Up__c</columns>
        <columns>XDate_Vehicle_Delivered__c</columns>
        <columns>Seller_Dealership__c</columns>
        <columns>buyer_dealership__c</columns>
        <columns>status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>counter_accepted,counter_original_accepted,ended_accepted</value>
        </filters>
        <filters>
            <field>Payment_Cleared__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Payment_Selected__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>XDate_Vehicle_Delivered__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>XDate_Vehicle_Picked_Up__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>end_time__c</field>
            <operation>greaterThan</operation>
            <value>3/12/2020 12:00 AM</value>
        </filters>
        <filters>
            <field>Buyer_IST_Rep__c</field>
            <operation>equals</operation>
            <value>Tim Olsen</value>
        </filters>
        <label>IST Sold Auctions View - Tim Olsen</label>
    </listViews>
</CustomObject>